Add experimental ARM64 server support